# apps/backend/core-api/internal/handler/event_registration_invitation/routes.go
@@ -11,7 +11,7 @@ func (h *Handler) RegisterRoutes(router fiber.Router) {
 	// Get event registration invitation of user and by event id
 	eventRegistrationInvitationsGroup.Get("/my/:event_id/", h.GetEventRegistrationInvitationByUserAndEvent)
 
-	eventRegistrationInvitationsGroup.Use(h.RoleGuardMiddleware.RequireVerifiedOrganizer()).Get("/:event_id/", h.GetEventRegistrationInvitationsByEventId)
+	eventRegistrationInvitationsGroup.Use(h.RoleGuardMiddleware.RequireVerifiedOrganizer()).Get("/:event_id", h.GetEventRegistrationInvitationsByEventId)
 	// Import event participants
 	eventRegistrationInvitationsGroup.Use(h.RoleGuardMiddleware.RequireVerifiedOrganizer()).Post("/import/:eventId", h.ImportEventParticipants)
 	// Cancel event registration invitation
